--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
   </header>
 
   <main>
-    <section>
+    <section class="padding-block-900">
       <div class="container">
         <div class="even-columns">
           <div>
@@ -65,7 +65,7 @@
       </div>
     </section>
 
-    <section>
+    <section class="padding-block-900">
       <div class="container">
         <div class="even-columns">
           <div>
@@ -117,13 +117,13 @@
       </div>
     </section>
 
-    <section class="carousel">
+    <section class="carousel padding-block-700">
       <h2 class="fs-secondary-heading fw-bold">What they’ve said</h2>
 
       <button class="btn">Get Started</button>
     </section>
 
-    <section class="cta bg-primary-400 text-neutral-100">
+    <section class="cta bg-accent-400 text-neutral-100 padding-block-700">
       <div class="container">
         <div class="even-columns">
           <div>
@@ -144,25 +144,25 @@
         <div>
           <a href="#">
             <img src="images/logo.svg" alt="logo">
-
-            <ul role="list" aria-label="Social links">
-              <li>
-                <img src="images/icon-facebook.svg" alt="" aria-label="facebook">
-              </li>
-              <li>
-                <img src="images/icon-youtube.svg" alt="" aria-label="youtube">
-              </li>
-              <li>
-                <img src="images/icon-twitter.svg" alt="" aria-label="twitter">
-              </li>
-              <li>
-                <img src="images/icon-pinterest.svg" alt="" aria-label="pinterest">
-              </li>
-              <li>
-                <img src="images/icon-instagram.svg" alt="" aria-label="instagram">
-              </li>
-            </ul>
           </a>
+
+          <ul role="list" aria-label="Social links">
+            <li>
+              <img src="images/icon-facebook.svg" alt="" aria-label="facebook">
+            </li>
+            <li>
+              <img src="images/icon-youtube.svg" alt="" aria-label="youtube">
+            </li>
+            <li>
+              <img src="images/icon-twitter.svg" alt="" aria-label="twitter">
+            </li>
+            <li>
+              <img src="images/icon-pinterest.svg" alt="" aria-label="pinterest">
+            </li>
+            <li>
+              <img src="images/icon-instagram.svg" alt="" aria-label="instagram">
+            </li>
+          </ul>
         </div>
 
         <div>
@@ -198,7 +198,7 @@
         <div>
           <form action="">
             <input type="email" name="email">
-            <button>Go</button>
+            <button class="btn">Go</button>
           </form>
 
           <p>Copyright 2020. All Rights Reserved</p>
@@ -206,7 +206,7 @@
       </div>
     </div>
   </footer>
-  Anisha Li
+  <!-- Anisha Li
   “Manage has supercharged our team’s workflow. The ability to maintain
   visibility on larger milestones at all times keeps everyone motivated.”
 
@@ -221,7 +221,7 @@
 
   Shanai Gough
   “Their software allows us to track, manage and collaborate on our projects
-  from anywhere. It keeps the whole team in-sync without being intrusive.”
+  from anywhere. It keeps the whole team in-sync without being intrusive.” -->
 
   <script type="module" src="/main.js"></script>
 </body>
