--- a/index.html
+++ b/index.html
@@ -136,14 +136,14 @@
       <button class="btn">Get Started</button>
     </section>
 
-    <section class="cta bg-accent-400 text-neutral-100 padding-block-700">
+    <section class="cta bg-accent-400 text-neutral-100 padding-block-900">
       <div class="container">
-        <div class="even-columns">
+        <div class="even-columns vertical-align-center">
           <div>
             <p class="fs-secondary-heading fw-bold">Simplify how your team works today.</p>
           </div>
 
-          <div>
+          <div class="justify-self-end justify-self-center-md">
             <button class="btn" data-type="inverted">Get Started</button>
           </div>
         </div>
