--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
   <header class="primary-header">
     <div class="container primary-header__container">
       <a href="#" class="logo">
-        <img src="images/logo.svg" alt="logo">
+        <svg class="logo" width="146" height="24" aria-label="Home">
+          <use xlink:href="images/logo.svg#logo"></use>
+        </svg>
       </a>
 
       <button class="mobile-nav-toggle" aria-controls="primary-nav" aria-expanded="false">
@@ -151,34 +153,56 @@
     </section>
   </main>
 
-  <footer class="bg-neutral-900 text-neutral-100">
+  <footer class="primary-footer bg-neutral-900 text-neutral-100 padding-block-700">
     <div class="container">
-      <div class="even-columns">
-        <div>
+      <div class="primary-footer__wrapper">
+        <div class="primary-footer__logo-social">
           <a href="#">
-            <img src="images/logo.svg" alt="logo">
+            <svg class="logo" width="146" height="24" aria-label="Manage - logo">
+              <use xlink:href="images/logo.svg#logo"></use>
+            </svg>
           </a>
 
-          <ul role="list" aria-label="Social links">
+          <ul class="social-list" role="list" aria-label="Social links">
             <li>
-              <img src="images/icon-facebook.svg" alt="" aria-label="facebook">
+              <a href="#" aria-label="facebook">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <img src="images/icon-youtube.svg" alt="" aria-label="youtube">
+              <a href="#" aria-label="youtube">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-youtube"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <img src="images/icon-twitter.svg" alt="" aria-label="twitter">
+              <a href="#" aria-label="twitter">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <img src="images/icon-pinterest.svg" alt="" aria-label="pinterest">
+              <a href="#" aria-label="pinterest">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-pinterest"></use>
+                </svg>
+              </a>
             </li>
             <li>
-              <img src="images/icon-instagram.svg" alt="" aria-label="instagram">
+              <a href="#" aria-label="instagram">
+                <svg class="social-icon">
+                  <use xlink:href="images/social-icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
 
-        <div>
+        <div class="primary-footer__nav">
           <nav class="footer-nav">
             <ul class="flow" style="--flow-spacer: 1em" aria-label="Footer" role="list">
               <li>
@@ -208,13 +232,13 @@
           </nav>
         </div>
 
-        <div>
-          <form action="">
+        <div class="primary-footer__form">
+          <form action="#">
             <input type="email" name="email">
-            <button class="btn">Go</button>
+            <button class="btn" data-shadow="none">Go</button>
           </form>
 
-          <p>Copyright 2020. All Rights Reserved</p>
+          <p class="primary-footer__copy">Copyright 2020. All Rights Reserved</p>
         </div>
       </div>
     </div>
