--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Manage landing page</title>
 
+  <link rel="stylesheet" href="https://unpkg.com/a11y-slider@latest/dist/a11y-slider.css" />
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="main.js" defer>
+
 </head>
 
 <body>
@@ -132,9 +133,51 @@
       </div>
     </section>
 
-    <section class="carousel padding-block-700">
+    <section class="carousel padding-block-700 text-center">
       <h2 class="fs-secondary-heading fw-bold">What they’ve said</h2>
-
+      <ul class="slider">
+        <li>
+          <img src="images/avatar-ali.png" alt="user avatar">
+          <div class="slider-content">
+            <h3 class="fw-bold">Anisha Li</h3>
+            <p>
+              “Manage has supercharged our team’s workflow. The ability to maintain
+              visibility on larger milestones at all times keeps everyone motivated.”
+            </p>
+          </div>
+        </li>
+        <li>
+          <img src="images/avatar-anisha.png" alt="user avatar">
+          <div class="slider-content">
+            <h3 class="fw-bold">Ali Bravo</h3>
+            <p>
+              “We have been able to cancel so many other subscriptions since using
+              Manage. There is no more cross-channel confusion and everyone is much
+              more focused.”
+            </p>
+          </div>
+        </li>
+        <li>
+          <img src="images/avatar-richard.png" alt="user avatar">
+          <div class="slider-content">
+            <h3 class="fw-bold">Richard Watts</h3>
+            <p>
+              “Manage allows us to provide structure and process. It keeps us organized
+              and focused. I can’t stop recommending them to everyone I talk to!”
+            </p>
+          </div>
+        </li>
+        <li>
+          <img src="images/avatar-shanai.png" alt="user avatar">
+          <div class="slider-content">
+            <h3 class="fw-bold">Shanai Gough</h3>
+            <p>
+              “Their software allows us to track, manage and collaborate on our projects
+              from anywhere. It keeps the whole team in-sync without being intrusive.”
+            </p>
+          </div>
+        </li>
+      </ul>
       <button class="btn">Get Started</button>
     </section>
 
@@ -243,24 +286,11 @@
       </div>
     </div>
   </footer>
-  <!-- Anisha Li
-  “Manage has supercharged our team’s workflow. The ability to maintain
-  visibility on larger milestones at all times keeps everyone motivated.”
 
-  Ali Bravo
-  “We have been able to cancel so many other subscriptions since using
-  Manage. There is no more cross-channel confusion and everyone is much
-  more focused.”
-
-  Richard Watts
-  “Manage allows us to provide structure and process. It keeps us organized
-  and focused. I can’t stop recommending them to everyone I talk to!”
-
-  Shanai Gough
-  “Their software allows us to track, manage and collaborate on our projects
-  from anywhere. It keeps the whole team in-sync without being intrusive.” -->
+  <script src="//unpkg.com/a11y-slider@latest/dist/a11y-slider.js"></script>
 
   <script type="module" src="/main.js"></script>
+
 </body>
 
 </html>
